Fixed visibility of the color picker
This is of course the brute force variant.
The actual fix would be to improve the structure of the stylesheet
which would probably force a restructure of the corresponding markup, also.

--- a/frontend/style/annotations/annotate.less
+++ b/frontend/style/annotations/annotate.less
@@ -132,7 +132,7 @@ i.check {
 		}
 
 		.colorPicker-picker {
-			display: inline-block;
+			display: inline-block !important;
 		}
 
 		i.edit {
